# sakana-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.executor  Dockerfile.mcp  INSTALL.md  README.md  docker-compose.yml  justfile  pyproject.toml  start.bat  start.ps1
docs/: README.md
docs/architecture/: README.md
docs/operations/: README.md
docs/researcher/: README.md
prompts/: README.md  ideation_system_prompt.md  review_critic_prompt.md  workflow_director_prompt.md
research_library/: README.md
research_library/tasks/: causal_representation_shift.json
skills/: FASTMCP_3_1_SKILL.md
src/sakana_mcp/: library.py  server.py  warehouse.py
webapp/: README.md  start.bat  start.ps1
webapp/backend/: app.py  requirements.txt
webapp/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
webapp/frontend/src/: main.tsx  styles.css
webapp/frontend/src/ui/: App.tsx
webapp/frontend/src/ui/components/: Card.tsx
webapp/frontend/src/ui/layout/: AppLayout.tsx
webapp/frontend/src/ui/pages/: DashboardPage.tsx  ExecutePage.tsx  IdeationPage.tsx  LibraryPage.tsx  LogsPage.tsx  ReviewPage.tsx  SettingsPage.tsx  StatusPage.tsx  VaultPage.tsx
webapp/frontend/src/ui/utils/: api.ts  cn.ts
